<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".Fragments.CustomerDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_city"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_city_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/customer_city_test"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_name_static"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_full_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/customer_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_case_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_case_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_application"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_application_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/customer_application_test"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_branch_thickness"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_branch_thickness_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/customer_branch_thickness_test"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/customer_address_test"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_status"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_status_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/customer_status_test"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_body_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_counter_body_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_units_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_units_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_bluetooth_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_bluetooth_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_4_digit"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_previous_counter_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_previous_counter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_subscription_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_subscription_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_block"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_block_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_group"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_group_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_plaque_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_plaque_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_national_code"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_national_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/customer_phone_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/details_fragment_phone_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/background_customer_details"
                android:padding="16dp"
                android:text="@string/test_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>