<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_splash_dialog"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        android:id="@+id/submit_info_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_customer_details"
        android:padding="8dp"
        android:text="@string/customer_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_customer_details"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/submit_info_enter_current_counter"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/submit_info_current_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_number"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:textColor="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_customer_details"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/submit_info_bluetooth_tv"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/submit_info_tv_bluetooth_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/test_4_digit"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_info_btn_start_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/submit_info_start_rec" />

            <Button
                android:id="@+id/submit_info_btn_play_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:text="@string/submit_info_play" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_info_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/import_alert_dialog_cancel"
            android:textColor="#00BCD4" />

        <Button
            android:id="@+id/submit_info_btn_submit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/submit_info_submit"
            android:textColor="#00BCD4" />

    </LinearLayout>


</LinearLayout>