<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:layoutDirection="rtl">

    <TextView
        android:padding="8dp"
        android:id="@+id/dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/splash_dialog_no_internet_alert"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@id/dialog_title_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:src="@drawable/icon_main_settings" />

    <TextView
        android:padding="8dp"
        android:id="@+id/dialog_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title_tv"
        android:layout_alignStart="@id/dialog_title_tv"
        android:text="@string/splash_dialog_message"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_message_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btn_retry"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_dialog_retry"
            android:textColor="#03A9F4" />

        <Button
            android:id="@+id/dialog_btn_exit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/splash_dialog_exit"
            android:textColor="#03A9F4" />

    </LinearLayout>

</RelativeLayout>